# Spencer-Macro-Utilities

./: .gitignore  CMakeLists.txt  CMakePresets.json  LINUX_SETUP.md  PORTING_NOTES.md  README.md  run_linux.sh  run_macos.sh  testname.sh
.github/: FUNDING.yml  autoupdaterurl
.github/workflows/: build-full-unsigned-and-linux-binary.yaml  build-linux-appimage.yaml  sign-release-and-build-linux-binary.yaml  sign-release.yaml
AppImage/: AppRun  SMU.desktop
app/: app_assets.cpp  app_assets.h  app_context.cpp  app_context.h  app_main.cpp  app_main.h  app_profile_bridge.cpp  app_profile_bridge.h  app_theme_bridge.cpp  app_theme_bridge.h  app_ui.cpp  app_ui.h  askpass.cpp  askpass.h  input_actions.cpp  input_actions.h  macro_runtime.cpp  macro_runtime.h  main_linux.cpp  main_windows.cpp
cmake/: run.sh.in
core/: app_state.cpp  app_state.h  key_codes.h  macro_state.cpp  macro_state.h
docs/: macro_runtime_coverage.md
platform/: input_backend.cpp  input_backend.h  logging.cpp  logging.h  network_backend.cpp  network_backend.h  platform_capabilities.cpp  platform_capabilities.h  platform_types.h  process_backend.cpp  process_backend.h  text_input_backend.cpp  text_input_backend.h  window_backend.cpp  window_backend.h
platform/linux/: display_server.cpp  display_server.h  foreground_x11.cpp  foreground_x11.h  input_evdev_uinput.cpp  input_evdev_uinput.h  input_permissions.cpp  input_permissions.h  process_proc_cgroup.cpp  process_proc_cgroup.h
platform/updater/: linux_updater.cpp  updater.cpp  updater.h  updater_types.h  windows_updater.cpp
public/: index.html
scripts/: install_linux_permissions.sh  package_linux.sh
src/: App.js
visual studio/: macroframework.cpp  macros.cpp  network_manager.cpp  overlay.cpp  profile_manager.cpp  resource.h  shared_mem.h  suspend.rc  suspend.sln  suspend.vcxproj  suspend.vcxproj.filters  suspend1.rc  theme_manager.cpp  wine_compatibility_layer.cpp
visual studio/Resource Files/: Suspend_Input_Helper_Linux_Binary  Suspend_Input_Helper_Mac_Binary  globals.h  imgui_helpers.h  keymapping.h  macros.h  network_manager.h  overlay.h  profile_manager.h  save_system.h  updater_system.h  wine_compatibility_layer.h
visual studio/Resource Files/Suspend_Input_Helper_Source/: compile_in_linux.sh  linux_helper.cpp  shared_mem.h
visual studio/Resource Files/Suspend_Linux_Input_Helper_Source/: compile_in_linux.sh  compile_in_wsl (ChatGPT).cmd  linux_helper.cpp  shared_mem.h
visual studio/Resource Files/Suspend_Mac_Input_Helper_Source/: compile_in_macos.sh  keymapping.h  macos_helper.cpp
